更新jenkins脚本